# transcode

./: .hgignore  AUTHORS  ChangeLog  ChangeLog.Historic  INSTALL  Makefile.am  Makefile.in  README  README-0.6.13  README-0.6.14  README-1.0.1  STYLE  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  libtool  transcode.spec  transcode.spec.in
aclib/: Makefile.am  Makefile.in  STYLE.txt  ac.h  ac_internal.h  accore.c  actest.c  asm_io.inc  asm_io.s  average.c  average.s  colorspace.c  colorspace.h  cputest.c  cputest.h  img_internal.h  img_rgb_packed.c  img_x86_common.h  img_yuv_mixed.c  img_yuv_packed.c  img_yuv_planar.c  img_yuv_rgb.c  imgconvert.c  imgconvert.h  make.sh  memcpy.c  memcpy.s  mmx.h  movtest.c  rescale.c  rescale.s  rgb2yuv.c  swap.c  swap.s  tcmemcpy.c  test-imgconvert.c  test-memcpy-speed.c  test-memcpy.c  yuv2rgb.c  yuv2rgb.h  (+1 more)
avilib/: Makefile.am  Makefile.in  avidump.c  avilib.c  avilib.h  avimisc.c  os.h  platform.h  platform_posix.c  platform_tc.c  static_avilib.h  static_wavlib.h  wavlib.c  wavlib.h
bbmpeg/: Makefile.am  Makefile.in  README.TXT  bbencode.h  bdist1.s  bdist2.s  bits.c  common.h  consts.h  dist1-trans.s  dist1.s  dist2.s  dovideo.c  edist1.s  encaudio.h  fdct_mmx.s  fdctdata.c  fdctref.c  gmo_read.h  idct.c  idct_mmx.s  idctdata.c  imgresample.h  main.h  mmxasm.c  motion.c  motion_mmx.s  mplex.h  params.c  pred_mmx.s  pred_old.s  predict.c  puthdr.c  putmpg.c  putpic.c  putvlc.c  quant_mmx.s  quantdata.c  quantize.c  ratectl.c  (+6 more)
contrib/: Makefile.am  Makefile.in  V2divx.pl  aviplay.pl  bitrate  bitrate.readme  divx_linux_guide.html  mpeg2avi.sh  mpipe.c  tc_rescale_audio.pl  tccomplete.source  vob2avi  vob2avi.readme  vob2divx.pl
docs/: CHANGES-1.0-1.1  CHANGES-1.1-1.2  ChangeLog-1.1  DV-to-DVD-HOWTO.txt  Makefile.am  Makefile.in  OPTIMIZERS  README.Inverse.Telecine.txt  README.cluster  README.dv  README.filter.modfps  README.rip  README.sync  README.vcd  README.xvid-credits  RELNOTES-1.1.0  architecture.txt  avi_comments.txt  clone.txt  export-API.txt  export-mods.txt  export_ffmpeg.txt  export_mp2.txt  export_mpeg.txt  export_pvm.txt  faq  filter-API.txt  filter-help.txt  filter-socket.txt  filter_dnr.txt  filter_logo.txt  filter_logoaway.txt  filter_text.txt  filter_yuvdenoise.txt  framerate.txt  ibp_support.txt  import-API.txt  import-mods.txt  import-xml.txt  import_nvrec.txt  (+8 more)
dvdread/: Makefile.am  Makefile.in  NEWS  TODO  dvd_reader.c  dvdcss.h  ifo_read.c
encode/: Makefile.am  encode_copy.c  encode_dv.c  encode_faac.c  encode_ffmpeg.c  encode_im.c  encode_lame.c  encode_lavc.c  encode_lzo.c  encode_null.c  encode_theora.c  encode_vorbis.c  encode_x264.c  encode_xvid.c  x264.cfg  xvid4.h
encore2/: Acknowledgement.txt  Interface.txt  Makefile.am  Makefile.in  TransferIDCT.c  TransferIDCT.h  TransferIDCT_mmx.c  bitstream.c  bitstream.h  block.c  block.h  dct.c  dct.h  encoder.c  encoder.h  encore.c  encore2.h  enctypes.h  fast_dct.c  halfpel.c  halfpel.h  halfpel_mmx.c  mad.c  mad.h  mad_mmx.c  max_level.h  motion.c  motion.h  predictions.c  predictions.h  putvlc.c  putvlc.h  quantize.c  quantize.h  rate_ctl.c  rate_ctl.h  rgb2yuv.c  rgb2yuv.h  timer.c  timer.h  (+3 more)
export/: Makefile.am  Makefile.in  af6_aux.cpp  af6_aux.h  aud_aux.c  aud_aux.h  divx4_encore2.h  divx4_encparam.h  divx4_vbr.c  divx5_encore2.h  dv_aux.h  dvd-ntsc.cfg  dvd-pal.cfg  encore_ext.h  export_ac3.c  export_af6.conf  export_af6.cpp  export_debugppm.c  export_def.h  export_divx.cpp  export_divx4.c  export_divx4raw.c  export_divx5.c  export_divx5raw.c  export_dv.c  export_dvraw.c  export_fame.c  export_ffmpeg.c  export_ffmpeg4.c  export_im.c  export_iv50.cpp  export_jpg.c  export_lame.c  export_lzo.c  export_mjpeg.c  export_mov.c  export_mp1e.c  export_mp2.c  export_mp2enc.c  export_mpeg.c  (+36 more)
filter/: Makefile.am  Makefile.in  deinterlace.c  filter_29to23.c  filter_32detect.c  filter_32drop.c  filter_aclip.c  filter_ascii.c  filter_astat.c  filter_barrel.c  filter_clone.c  filter_compare.c  filter_control.c  filter_cpaudio.c  filter_cshift.c  filter_cut.c  filter_decimate.c  filter_denoise3d.c  filter_detectclipping.c  filter_detectsilence.c  filter_dilyuvmmx.c  filter_dnr.c  filter_doublefps.c  filter_facemask.c  filter_fieldanalysis.c  filter_fields.c  filter_fps.c  filter_hqdn3d.c  filter_invert.c  filter_ivtc.c  filter_levels.c  filter_list.awk  filter_list.awk.in  filter_logo.c  filter_logoaway.c  filter_lowpass.c  filter_mask.c  filter_modfps.c  filter_msharpen.c  filter_nored.c  (+25 more)
import/: Makefile.am  Makefile.in  a52_decore.c  ac3scan.c  ac3scan.h  af6_decore.cpp  aux_pes.c  aux_pes.h  bitrate.c  clone.c  clone.h  decode_a52.c  decode_ac3.c  decode_af6.c  decode_divx.c  decode_dv.c  decode_lavc.c  decode_lzo.c  decode_mov.c  decode_mp3.c  decode_mpeg2.c  decode_ogg.c  decode_ulaw.c  decode_xvid.c  decode_yuv.c  demux_pass.c  demuxer.c  demuxer.h  divx_decore.h  dvd_reader.c  dvd_reader.h  extract_ac3.c  extract_avi.c  extract_dv.c  extract_lzo.c  extract_mp3.c  extract_mpeg2.c  extract_mxf.c  extract_ogm.c  extract_pcm.c  (+109 more)
libac3/: Makefile.am  Makefile.in  README  ac3.h  ac3_internal.h  bit_allocate.c  bit_allocate.h  bitstream.c  bitstream.h  coeff.c  coeff.h  crc.c  crc.h  debug.c  debug.h  decode.c  decode.h  dither.c  dither.h  downmix.c  downmix.h  exponent.c  exponent.h  imdct.c  imdct.h  parse.c  parse.h  rematrix.c  rematrix.h  sanity_check.c  sanity_check.h  stats.c  stats.h
libdldarwin/: Makefile.am  Makefile.in  dlfcn.h  dlfcn_simple.c
libdvenc/: Makefile.am  Makefile.in  dvenc.c  dvenc.h  enc_audio_input.c  enc_audio_input.h  enc_audio_input2.h  enc_input.c  enc_input.h  enc_output.c  enc_output.h  enc_output2.c
libioaux/: Makefile.am  Makefile.in  configs.c  configs.h  framecode.c  framecode.h  framecode.l  static_libioaux.h
libmp3lame/: Makefile.am  Makefile.in  brhist.c  encoder.c  ieeefloat.h  portableio.c  portableio.h  rtp.c
libmpeg2/: Makefile.am  Makefile.in  cpu_state.c  decode.c  idct.c  idct_altivec.c  idct_mmx.c  motion_comp.c  motion_comp_altivec.c  motion_comp_mmx.c  mpeg2.h  (+2 more)
(+553 files in other folders)
